--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
     "lintfix": "eslint nodes credentials package.json --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
   },
   "files": [
@@ -48,13 +51,17 @@
   },
   "devDependencies": {
     "@types/html-to-text": "^9.0.4",
+    "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.20",
     "@typescript-eslint/parser": "~8.32.0",
     "eslint": "^8.57.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
     "gulp": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
