feat: add custom error json payload

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-<...>",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "description": "",
   "keywords": [
     "n8n-community-node-package"
@@ -32,16 +32,16 @@
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
-    "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
-    ],
+    "credentials": [],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/HttpRequestAnyTool/HttpRequestAnyTool.node.js"
     ]
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
+    "@types/jsdom": "^27.0.0",
+    "@types/lodash": "^4.17.21",
+    "@types/ramda": "^0.31.1",
     "@typescript-eslint/parser": "~8.32.0",
     "eslint": "^8.57.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
@@ -51,5 +51,14 @@
   },
   "peerDependencies": {
     "n8n-workflow": "*"
+  },
+  "dependencies": {
+    "@mozilla/readability": "^0.6.0",
+    "cheerio": "^1.1.2",
+    "form-data": "^4.0.5",
+    "html-to-text": "^9.0.5",
+    "jsdom": "^27.2.0",
+    "lodash": "^4.17.21",
+    "ramda": "^0.32.0"
   }
 }
