--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "n8n-nodes-<...>",
   "version": "0.4.0",
-  "description": "",
+  "description": "a n8n http request tool node support always ok",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "washan",
+    "email": "francismajere@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/washanhanzi/n8n-nodes-http-request-any-tool"
   },
   "engines": {
     "node": ">=20.15"
