--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "n8n-nodes-<...>",
-  "version": "0.4.0",
+  "name": "n8n-nodes-http-request-any-tool",
+  "version": "0.9.4",
   "description": "a n8n http request tool node support always ok",
   "keywords": [
     "n8n-community-node-package"
@@ -20,7 +20,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "npx rimraf dist && tsc && gulp build:icons",
+    "build": "npx rimraf dist && esbuild nodes/HttpRequestAnyTool/HttpRequestAnyTool.node.ts --bundle --platform=node --target=node20 --outfile=dist/nodes/HttpRequestAnyTool/HttpRequestAnyTool.node.js --external:n8n-workflow --external:n8n-core && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes --write",
     "lint": "eslint nodes package.json",
@@ -38,27 +38,25 @@
     ]
   },
   "devDependencies": {
+    "@mozilla/readability": "^0.6.0",
     "@types/html-to-text": "^9.0.4",
-    "@types/jsdom": "^27.0.0",
     "@types/lodash": "^4.17.21",
     "@types/ramda": "^0.31.1",
     "@typescript-eslint/parser": "~8.32.0",
+    "cheerio": "^1.1.2",
+    "esbuild": "^0.27.0",
     "eslint": "^8.57.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
+    "form-data": "^4.0.5",
     "gulp": "^5.0.0",
+    "html-to-text": "^9.0.5",
+    "linkedom": "^0.18.12",
+    "lodash": "^4.17.21",
     "prettier": "^3.5.3",
+    "ramda": "^0.32.0",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
-  },
-  "dependencies": {
-    "@mozilla/readability": "^0.6.0",
-    "cheerio": "^1.1.2",
-    "form-data": "^4.0.5",
-    "html-to-text": "^9.0.5",
-    "jsdom": "^27.2.0",
-    "lodash": "^4.17.21",
-    "ramda": "^0.32.0"
   }
 }
